# goose3

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.rst  app.py  codecov.yml  docker-compose.yml  goose3_main_Debug.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_file.py
.github/: dependabot.yml
.github/workflows/: publish.yml  python-package.yml
api/: requirements.txt  routes.py  util.py  views.py
api/decorators/: authenticate.py
docs/: requirements.txt
docs/source/: code.rst  conf.py  quickstart.rst
goose/: __init__.py  article.py  configuration.py  crawler.py  image.py  network.py  outputformatters.py  parsers.py  version.py
goose/extractors/: content.py  images.py  title.py
goose/utils/: __init__.py  encoding.py  images.py
goose3/: __init__.py  article.py  cleaners.py  configuration.py  crawler.py  exceptions.py  image.py  network.py  outputformatters.py  parsers.py  text.py  version.py  video.py
goose3/extractors/: __init__.py  authors.py  content.py  images.py  links.py  metas.py  opengraph.py  publishdate.py  reportagenewsarticle.py  schema.py  tags.py  title.py  tweets.py  videos.py
goose3/resources/text/: stopwords-de.txt  stopwords-fr.txt  stopwords-hg.txt  stopwords-hi.txt  stopwords-hr.txt  stopwords-hu.txt  stopwords-id.txt  stopwords-ku.txt  stopwords-lt.txt  stopwords-no.txt  stopwords-pl.txt  stopwords-ro.txt  stopwords-sl.txt  stopwords-sr.txt  stopwords-sv.txt  stopwords-ta.txt  stopwords-te.txt  stopwords-uk.txt  stopwords-ur.txt  stopwords-zh.txt
goose3/utils/: __init__.py  constants.py  encoding.py  images.py
requirements/: python  python-dev
tests/: __init__.py  configuration.py  test_article.py  test_authors.py  test_base.py  test_configuration.py  test_content.py  test_images.py  test_links.py  test_metas.py  test_opengraph.py  test_parsers.py  test_publishdate.py  test_reportagenewsarticle.py  test_schema.py  test_stopwords.py  test_tags.py  test_text.py  test_title.py  test_tweets.py  test_videos.py
tests/extractors/: authors.py  base.py  content.py  images.py  tags.py  videos.py
vklabs/docs/: Makefile  make.bat
vklabs/goose3/: __init__.py  cleaners.py  configuration.py  crawler.py  image.py  outputformatters.py  parsers.py  text.py  video.py
vklabs/tests/: test_article.py  test_authors.py  test_base.py  test_configuration.py  test_content.py  test_images.py  test_metas.py  test_opengraph.py  test_parsers.py  test_publishdate.py  test_text.py  test_tweets.py  test_wiwo.json
(+135 files in other folders)
