[metadata]
name = goose3
version = attr: goose3.version.__version__
author = Mahmoud Lababidi
author_email = lababidi+py@gmail.com
url = https://github.com/goose3/goose3
description = Html Content / Article Extractor, web scrapping for Python3
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = python, scrapping, extractor, web scrapping, nlp
license = Apache
license_files = LICENSE.txt
bugtrack_url = https://github.com/barrust/mediawiki/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages =
    goose3
    goose3.extractors
    goose3.utils
    goose3.resources.text
    goose3.resources.images
install_requires =
    requests
    Pillow
    lxml
    cssselect
    beautifulsoup4
    python-dateutil
    langdetect
    pyahocorasick
python_requires = >=3.8

[options.extras_require]
chinese = jieba
arabic = nltk
all =
    jieba
    nltk

[options.packages.find]
exclude = tests



[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
